<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pintr_v_0_01.PintrMain" >

<LinearLayout
	android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    style="@style/generalPageBackground">

    <include layout="@layout/pintr_g_99_header_view"/>
  
	
	<ScrollView
		android:id="@+id/profileSearchPage"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
		   
		<LinearLayout
			android:layout_marginTop="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="center" >
	    
	        <TextView
	            android:id="@+id/handleDisplay"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="User handle + details" 
		    	android:gravity="left" 
				android:layout_marginBottom="10dp"/>
		    
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
				android:orientation="horizontal"
			    android:id="@+id/peopleInteractionMenu"
			    tools:context="com.example.pintr_v_0_01.PintrMain" 
				android:paddingLeft="50dp">
			    
					
					<LinearLayout
					    android:id="@+id/socialImgButton"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingBottom="5dp"
					    android:paddingLeft="5dp"
					    android:paddingRight="5dp"
					    android:paddingTop="5dp"
						android:background="@color/lightBlue"
					    android:layout_weight="1"
						android:gravity="center"
					    android:orientation="vertical" >
					   
					     <ImageView
						    android:id="@+id/socialStatusImg"
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:contentDescription="fb_logo"
					        android:src="@drawable/fb_logo_transparent_small" />
					     
					     
				        <TextView
					    	android:id="@+id/socialDisplayLabel"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="Social"
				            android:textSize="10sp" />
					     
					</LinearLayout>
					
					<LinearLayout
					    android:id="@+id/likeImgButton"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingBottom="5dp"
					    android:paddingLeft="5dp"
					    android:paddingRight="5dp"
					    android:paddingTop="5dp"
						android:background="@color/lightBlue"
						android:layout_weight="1"
						android:gravity="center"
					    android:orientation="vertical" >
					   
					     <ImageView
					    	android:id="@+id/likeImg"
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:contentDescription="@string/imagetext"
					        android:src="@drawable/like_toggle_button" />
					     
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="Like"
				            android:textSize="10sp" />
					     
					</LinearLayout>
					
					<LinearLayout
					    android:id="@+id/messageImgLOButton"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingBottom="5dp"
					    android:paddingLeft="5dp"
					    android:paddingRight="5dp"
					    android:paddingTop="5dp"
						android:background="@color/lightBlue"
					    android:layout_weight="1"
						android:gravity="center"
					    android:orientation="vertical" >
					   
					     <ImageView
						    android:id="@+id/messagesImage"
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:contentDescription="@string/imagetext"
					        android:src="@drawable/envelope" />
					     
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="Message"
				            android:textSize="10sp" />
					</LinearLayout>
					
					
				   	
					<LinearLayout
					    android:id="@+id/eventsInviteImgButton"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingBottom="5dp"
					    android:paddingLeft="5dp"
					    android:paddingRight="5dp"
					    android:paddingTop="5dp"
						android:background="@color/lightBlue"
					    android:layout_weight="1"
						android:gravity="center"
					    android:orientation="vertical" >
					   
					     <ImageView
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:contentDescription="@string/imagetext"
					        android:src="@drawable/calendar" />
					     
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="Invite"
				            android:textSize="10sp" />
					</LinearLayout>
					
					<LinearLayout
					    android:id="@+id/friendsImgButton"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingBottom="5dp"
					    android:paddingLeft="5dp"
					    android:paddingRight="5dp"
					    android:paddingTop="5dp"
						android:background="@color/lightBlue"
					    android:layout_weight="1"
						android:gravity="center"
					    android:orientation="vertical" >
					   
					     <ImageView
						    android:id="@+id/friendStatusImg"
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:contentDescription="@string/imagetext"
					        android:src="@drawable/person" />
					     
					     
				        <TextView
					    	android:id="@+id/friendsDisplayLabel"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="Friends"
				            android:textSize="10sp" />
					     
					</LinearLayout>
					
					
			</LinearLayout>
					    
		     
		    
		    
		    
		    <LinearLayout
				android:id="@+id/profileSectionUserInfo"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:gravity="center_vertical|left"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="20dp"
			    android:orientation="vertical" >

			
			</LinearLayout>
		    
		    <LinearLayout
				android:id="@+id/profileSectionRecentQuestions"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:gravity="left"
				android:paddingTop="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingBottom="10dp"
			    android:orientation="vertical" >
		        
		        
        	    <RelativeLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:id="@+id/profileSectionRecentQuestionsHdr">

			        <TextView
			            android:id="@+id/RecentQuestionsTitle"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
       					android:layout_alignParentLeft="true" 
			            android:text="@string/profileSectionRecentQuestions" />
					
				     <ImageView
				        android:layout_width="30dp"
				        android:layout_height="30dp"
    					android:layout_alignParentRight="true" 
				        android:contentDescription="@string/imagetext"
				        android:src="@drawable/light_grey_left_arrow" />
		     
        	    </RelativeLayout>
				
			</LinearLayout>
			
		    
		    <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
			    android:background="@color/greyMed"/>
		        
		    <LinearLayout
				android:id="@+id/profileSectionMostPopularQuestions"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:gravity="left"
				android:paddingTop="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingBottom="10dp"
			    android:orientation="vertical" >
		            
	        	    <RelativeLayout
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:layout_marginBottom="10dp"
						android:id="@+id/profileSectionMostPopularQuestionsHdr">
	        	    
	
		           		<TextView
				            android:id="@+id/MostPopularQuestionsTitle"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
       						android:layout_alignParentLeft="true" 
			    			android:text="@string/profileSectionMostPopularQuestions" />
					     <ImageView
					        android:layout_width="30dp"
					        android:layout_height="30dp"
       						android:layout_alignParentRight="true" 
			    			android:contentDescription="@string/imagetext"
					        android:src="@drawable/light_grey_left_arrow" />
					</RelativeLayout>
		     
			</LinearLayout>
			
		    
		    <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
			    android:background="@color/greyMed"/>
		           
		    <LinearLayout
				android:id="@+id/profileSectionInterests"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:gravity="left"
				android:paddingTop="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingBottom="10dp"
			    android:orientation="vertical" >
			    
	        	<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
					android:gravity="center_vertical|left"
				    android:orientation="horizontal" >

	        	    <RelativeLayout
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:layout_marginBottom="10dp">
	        	    
				        <TextView
				            android:id="@+id/profileSectionInterestsTitle"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
       						android:layout_alignParentLeft="true" 
				            android:text="@string/profileSectionInterests" />
				        
	        	    </RelativeLayout>
				</LinearLayout>
				
				
			</LinearLayout>
		    
		    
		</LinearLayout>
		
	</ScrollView>


</LinearLayout>



<include layout="@layout/pintr_g_96_settings_menu_view"/>
    
    
</RelativeLayout>